--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,16 @@ footer {
   margin-left: 10%;
 }
 
+.screen-loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 300px;
+  height: 200px;
+}
+
 @media only screen and (max-width: 992px) {
   header,
   main,
