--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,18 @@ footer {
   height: 200px;
 }
 
+.bg-rightsidenav {
+  /*Addtheblureffect*/
+  filter: blur(3px);
+  -webkit-filter: blur(3px);
+  /*Fullheight*/
+  height: 100%;
+  /*Centerandscaletheimagenicely*/
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @media only screen and (max-width: 992px) {
   header,
   main,
